Added venue owner profile

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 VITE_BASE_API=http://localhost:8080/
+VITE_FIREBASE_API_KEY=AIzaSyB38xM6pDgRrs1b37gVGaeKK20N1awLdBs
+VITE_FIREBASE_AUTH_DOMAIN=bashboss-97224.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=bashboss-97224
+VITE_FIREBASE_STORAGE_BUCKET=bashboss-97224.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=126739720995
+VITE_FIREBASE_APP_ID=1:126739720995:web:d9b4422ebb882fdd4f3a96
+VITE_FIREBASE_MEASUREMENT_ID=G-DM3WP6Z5Q9
