--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.7",
+    "firebase": "^10.10.0",
     "i": "^0.3.7",
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.22.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.17",
