Completed create read integration of venue

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_BASE_API=http://localhost:8080/
+VITE_BASE_VAB_API=http://localhost:8081/
 VITE_FIREBASE_API_KEY=AIzaSyB38xM6pDgRrs1b37gVGaeKK20N1awLdBs
 VITE_FIREBASE_AUTH_DOMAIN=bashboss-97224.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=bashboss-97224
