--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.7",
+    "bcryptjs-react": "^2.4.6",
     "firebase": "^10.10.0",
     "i": "^0.3.7",
     "npm": "^10.4.0",
