--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@reduxjs/toolkit": "^2.2.1",
+    "@supabase/supabase-js": "^2.42.5",
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.7",
     "bcryptjs-react": "^2.4.6",
@@ -24,12 +25,14 @@
     "react-redux": "^9.1.0",
     "react-router": "^6.22.1",
     "react-router-dom": "^6.22.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/draft-js": "^0.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
